# Interpreter-lox

./: .gitignore  CMakeLists.txt  README.MD  SyntaxGrammer.txt  commit.sh  env.bash  interpreter.sh  run.sh
docs/: SupportedFeatures.md  SupportedFeatures.txt  SyntaxGrammer.txt
libs/includes/logger/: ConsoleLogger.hpp  FileLogger.hpp
lox_source_files/: expressions.lox.txt  main.lox.txt
source_files/: main.lox.txt
src/: lox.cpp  lox.hpp  main.cpp
src/ast/: BinaryExpression.cpp  BinaryExpression.hpp  GroupedExpression.cpp  GroupedExpression.hpp  IExpression.hpp  IVisitor.hpp  LiteralExpression.cpp  LiteralExpression.hpp  TernaryExpression.cpp  TernaryExpression.hpp  UnaryExpression.cpp  UnaryExpression.hpp
src/astFormatter/: AstPrinter.cpp  AstPrinter.hpp
src/enviroment/: Enviroment.cpp  Enviroment.hpp  EnviromentManager.cpp  EnviromentManager.hpp
src/exceptions/: LoxError.hpp  ParserError.hpp  RunTimeError.hpp  TypeError.hpp
src/expressions/: AssignmentExpression.cpp  AssignmentExpression.hpp  BinaryExpression.cpp  BinaryExpression.hpp  GroupedExpression.cpp  GroupedExpression.hpp  IExpression.hpp  IExpressionVisitor.hpp  LiteralExpression.cpp  LiteralExpression.hpp  LogicExpression.cpp  LogicExpression.hpp  TernaryExpression.cpp  TernaryExpression.hpp  UnaryExpression.cpp  UnaryExpression.hpp  VariableExpression.cpp  VariableExpression.hpp
src/expressionsFormatter/: ExpressionPrinter.cpp  ExpressionPrinter.hpp
src/interpreter/: Interpreter.cpp  Interpreter.hpp
src/lexer/: Lexer.cpp  Lexer.hpp
src/logger/: ConsoleLogger.cpp  ConsoleLogger.hpp  FileLogger.cpp  FileLogger.hpp  ILogger.cpp  ILogger.hpp
src/object/: Object.cpp  Object.hpp
src/parser/: Parser.cpp  Parser.hpp
src/sourceReader/: ConsoleReader.cpp  ConsoleReader.hpp  FileReader.cpp  FileReader.hpp  ISourceReader.hpp
src/sourceReporter/: IReportMessage.cpp  IReportMessage.hpp  LineDescriptor.cpp  LineDescriptor.hpp  LineError.cpp  LineError.hpp  SourceReporter.cpp  SourceReporter.hpp
src/statements/: BlockStatement.cpp  BlockStatement.hpp  ExpressionStatement.cpp  ExpressionStatement.hpp  ForStatement.cpp  ForStatement.hpp  IStatement.hpp  IStatementVisitor.hpp  IfStatement.cpp  IfStatement.hpp  PrintStatement.cpp  PrintStatement.hpp  VarStatement.cpp  VarStatement.hpp  WhileStatement.cpp  WhileStatement.hpp
src/stringBuilder/: StringBuilder.cpp  StringBuilder.hpp
src/tokens/: Token.cpp  Token.hpp
src/utils/: GenericType.cpp  GenericType.hpp
